[BlazorServer](update) Structure Changes and Radzen
- Changes in the Blazor Folder and File structure
- Imported the Box Loading from Github Pages
- Installed Radzen UI Library

--- a/LAKAPSAGAP.BlazorServer/_Imports.razor
+++ b/LAKAPSAGAP.BlazorServer/_Imports.razor
@@ -7,4 +7,5 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
 @using LAKAPSAGAP.BlazorServer
-@using LAKAPSAGAP.BlazorServer.Components
+@using LAKAPSAGAP.BlazorServer.Shared
+@using Radzen.Blazor
