--- a/LAKAPSAGAP.BlazorServer/_Imports.razor
+++ b/LAKAPSAGAP.BlazorServer/_Imports.razor
@@ -9,4 +9,6 @@
 @using LAKAPSAGAP.Services.Repositories
 @using LAKAPSAGAP.BlazorServer
 @using LAKAPSAGAP.BlazorServer.Shared
+@using Radzen
 @using Radzen.Blazor
+@using Radzen.Blazor.Rendering
