--- a/LAKAPSAGAP.BlazorServer/Shared/MainLayout.razor
+++ b/LAKAPSAGAP.BlazorServer/Shared/MainLayout.razor
@@ -1,6 +1,7 @@
 ﻿@inherits LayoutComponentBase
 
-<div class="page">
+<RadzenComponents @rendermode="InteractiveAuto" />
+@* <div class="page">
     <div class="sidebar">
         <NavMenu />
     </div>
@@ -20,4 +21,16 @@
     An unhandled error has occurred.
     <a href="" class="reload">Reload</a>
     <a class="dismiss">🗙</a>
-</div>
+</div> *@
+
+<RadzenLayout>
+    <RadzenHeader class="shadow-sm" Style="box-shadow: var(--rz-shadow-0); background-color: var(--rz-white);">
+        <NavMenu />
+    </RadzenHeader>
+    <RadzenBody Style="background-color: var(--rz-base-200);">
+        @Body
+    </RadzenBody>
+@*     <RadzenFooter class="shadow">
+        This is the Footer
+    </RadzenFooter> *@
+</RadzenLayout>
