[BlazorServer][Services](update) Users Page
- Added View Model for Users Page
- Created Users Page
- Created Breadcrumbs Macro
- Created Container Macro

--- a/LAKAPSAGAP.BlazorServer/Shared/NavMenu.razor
+++ b/LAKAPSAGAP.BlazorServer/Shared/NavMenu.razor
@@ -1,78 +1,81 @@
-﻿<RadzenStack Style="max-width: 1920px; margin-left: 4rem; margin-right: 4rem; " Orientation="Orientation.Horizontal" AlignItems="AlignItems.Center" 
-JustifyContent="JustifyContent.SpaceBetween" Wrap="FlexWrap.NoWrap" Gap="8rem">
-    
+﻿<RadzenStack Style="max-width: 1920px; margin-left: 4rem; margin-right: 4rem; " Orientation="Orientation.Horizontal" AlignItems="AlignItems.Center"
+             JustifyContent="JustifyContent.SpaceBetween" Wrap="FlexWrap.NoWrap" Gap="8rem">
+
     @* Website Logo *@
-   
-    <a href="/Dashboard" Style="width: 18rem; ">
-        <RadzenImage Path="images/long.png" Style="width: 14rem; " AlternateText="LakapSagap"/>
-    </a>
-    
+
+    <div href="/Dashboard" Style="width: 18rem; "
+         @onclick="@(() =>_navManager.NavigateTo("Dashboard", true))">
+        <RadzenImage Path="images/long.png" Style="width: 14rem; " AlternateText="LakapSagap" />
+    </div>
+
     @* Navigation Links *@
 
-    <RadzenStack Style="" Orientation="Orientation.Horizontal" AlignItems="AlignItems.Center" 
-             JustifyContent="JustifyContent.Center" Wrap="FlexWrap.NoWrap" Gap="1rem">
-        <a href="/Dashboard" class="d-flex flex-row gap-2 px-4 py-2 justify-content-center align-items-center link-active rz-border-radius-6">
+    <RadzenStack Style="" Orientation="Orientation.Horizontal" AlignItems="AlignItems.Center"
+                 JustifyContent="JustifyContent.Center" Wrap="FlexWrap.NoWrap" Gap="1rem">
+        <div class="d-flex flex-row gap-2 px-4 py-2 justify-content-center align-items-center link-active rz-border-radius-6"
+             @onclick="@(() =>_navManager.NavigateTo("Dashboard", true))">
             <i class='bx bxs-home fs-5'></i>
             <span class="fs-7 fw-bold text-center">Dashboard</span>
-        </a>
-        <a href="/Request" class="d-flex flex-row gap-2 px-4 py-2 justify-content-center align-items-center link rz-border-radius-6">
+        </div>
+        <div class="d-flex flex-row gap-2 px-4 py-2 justify-content-center align-items-center link rz-border-radius-6"
+             @onclick="@(() =>_navManager.NavigateTo("Request", true))">
             <i class='bx bx-transfer-alt fs-5'></i>
             <span class="fs-6 fw-bold text-center">Request</span>
-        </a>
+        </div>
         <div @ref="warehouseButton" @onclick="@(args => {warehousePopup.ToggleAsync(warehouseButton); ToggleVisibility();})" class="d-flex flex-row gap-2 px-4 py-2 justify-content-center align-items-center link rz-border-radius-6">
             <i class='bx bxs-business fs-5'></i>
             <span class="fs-6 fw-bold text-center">Warehouse</span>
             <i class="@($"bx {(_isVisible ? "bx-caret-up" : "bx-caret-down")} fs-6 ms-1")"></i>
         </div>
-        @* <a href="/Warehouse" class="d-flex flex-row gap-2 px-4 py-2 justify-content-center align-items-center link rz-border-radius-6">
-            <i class='bx bxs-business fs-5'></i>
-            <span class="fs-6 fw-bold text-center">Warehouse</span>
-        </a> *@
-        <a href="/Users" class="d-flex flex-row gap-2 px-4 py-2 justify-content-center align-items-center link rz-border-radius-6">
+        <div class="d-flex flex-row gap-2 px-4 py-2 justify-content-center align-items-center link rz-border-radius-6"
+             @onclick="@(() =>_navManager.NavigateTo("Users", true))">
             <i class='bx bxs-user fs-5'></i>
             <span class="fs-6 fw-bold text-center">Users</span>
-        </a>
-        <a href="/Reports" class="d-flex flex-row gap-2 px-4 py-2 justify-content-center align-items-center link rz-border-radius-6">
-            <i class='bx bxs-report fs-5' ></i>
+        </div>
+        <div class="d-flex flex-row gap-2 px-4 py-2 justify-content-center align-items-center link rz-border-radius-6"
+             @onclick="@(() =>_navManager.NavigateTo("Reports", true))">
+            <i class='bx bxs-report fs-5'></i>
             <span class="fs-6 fw-bold text-center">Reports</span>
-        </a>
-        <a href="/History" class="d-flex flex-row gap-2 px-4 py-2 justify-content-center align-items-center link rz-border-radius-6">
-            <i class='bx bx-history fs-5' ></i>
+        </div>
+        <div class="d-flex flex-row gap-2 px-4 py-2 justify-content-center align-items-center link rz-border-radius-6"
+             @onclick="@(() =>_navManager.NavigateTo("History", true))">
+            <i class='bx bx-history fs-5'></i>
             <span class="fs-6 fw-bold text-center">History</span>
-        </a>
+        </div>
     </RadzenStack>
 
     @* User *@
 
-    <RadzenStack Style="width: 18rem;" Orientation="Orientation.Horizontal" AlignItems="AlignItems.Center" 
-             JustifyContent="JustifyContent.End" Wrap="FlexWrap.NoWrap" Gap="4rem">
+    <RadzenStack Style="width: 18rem;" Orientation="Orientation.Horizontal" AlignItems="AlignItems.Center"
+                 JustifyContent="JustifyContent.End" Wrap="FlexWrap.NoWrap" Gap="4rem">
         <RadzenButton Icon="notifications" ButtonStyle="ButtonStyle.Base" Style="border-radius: var(--rz-border-radius-6);" />
         <div>
-
         </div>
     </RadzenStack>
 
 </RadzenStack>
 
 <Popup @ref=warehousePopup Lazy=true class="popup">
-    <RadzenStack Style="width: 8rem;" Orientation="Orientation.Vertical" AlignItems="AlignItems.Start" 
-             JustifyContent="JustifyContent.Start" Wrap="FlexWrap.NoWrap" Gap="0.25rem">
-        <a style="width: 100%; border: none; border-radius: var(--rz-border-radius-6);" 
+    <RadzenStack Style="width: 8rem;" Orientation="Orientation.Vertical" AlignItems="AlignItems.Start"
+                 JustifyContent="JustifyContent.Start" Wrap="FlexWrap.NoWrap" Gap="0.25rem">
+        <div style="width: 100%; border: none; border-radius: var(--rz-border-radius-6);"
              class="d-flex flex-row gap-2 px-4 py-2 justify-content-center align-items-center link"
-             href="/Stocks">
-            <i class='bx bxs-package fs-5' ></i>
+             @onclick="@(() =>_navManager.NavigateTo("Users", true))">
+            <i class='bx bxs-package fs-5'></i>
             <span class="fs-6 fw-bold text-center">Stocks</span>
-        </a>
-        <a style="width: 100%; border: none; border-radius: var(--rz-border-radius-6);"  
-           class="d-flex flex-row gap-2 px-4 py-2 justify-content-start align-items-center link"
-           href="/Kits">
-            <i class='bx bxs-shopping-bag-alt fs-5' ></i>
+        </div>
+        <div style="width: 100%; border: none; border-radius: var(--rz-border-radius-6);"
+             class="d-flex flex-row gap-2 px-4 py-2 justify-content-start align-items-center link"
+             @onclick="@(() =>_navManager.NavigateTo("Users", true))">
+            <i class='bx bxs-shopping-bag-alt fs-5'></i>
             <span class="fs-6 fw-bold text-center">Kits</span>
-        </a>
+        </div>
     </RadzenStack>
 </Popup>
 
 @code {
+    [Inject] private NavigationManager _navManager { get; set; }
+
     ElementReference warehouseButton;
     Popup warehousePopup;
     bool _isVisible = false;
@@ -96,4 +99,4 @@ JustifyContent="JustifyContent.SpaceBetween" Wrap="FlexWrap.NoWrap" Gap="8rem">
         box-shadow: var(--rz-panel-shadow);
         border-radius: var(--rz-border-radius)
     }
- </style>
+</style>
