--- a/LAKAPSAGAP.BlazorServer/_Imports.razor
+++ b/LAKAPSAGAP.BlazorServer/_Imports.razor
@@ -9,6 +9,7 @@
 @using LAKAPSAGAP.Services.Repositories
 @using LAKAPSAGAP.BlazorServer
 @using LAKAPSAGAP.BlazorServer.Shared
+@using LAKAPSAGAP.BlazorServer.Shared.Components
 @using Radzen
 @using Radzen.Blazor
 @using Radzen.Blazor.Rendering
