--- a/LAKAPSAGAP.BlazorServer/Shared/NavMenu.razor.css
+++ b/LAKAPSAGAP.BlazorServer/Shared/NavMenu.razor.css
@@ -7,7 +7,8 @@
     outline: none;
 }
 
-.link {
+.link 
+{
     color: var(--rz-base-700);
     cursor: pointer;
     border: 1px solid var(--rz-base-400);
@@ -22,4 +23,9 @@
     color: var(--rz-base-200);
     outline: none;
     text-decoration: none !important;
+}
+
+.link a:active
+{
+    color: var(--rz-base-white);
 }
