--- a/LAKAPSAGAP.BlazorServer/Shared/Components/MacroContainer.razor
+++ b/LAKAPSAGAP.BlazorServer/Shared/Components/MacroContainer.razor
@@ -22,5 +22,8 @@
     public Dictionary<string, object> AdditionalAttributes { get; set; } = new();
 
     private string CombinedStyle =>
-        string.IsNullOrWhiteSpace(Style) ? "padding: 1rem 8rem 1rem 8rem;" : $"{Style}; padding: 1rem 8rem 1rem 8rem;";
+    string.IsNullOrWhiteSpace(Style) || !Style.Contains("padding")
+        ? $"padding: 1rem 8rem 1rem 8rem; {Style}"
+        : Style;
+
 }
