[BlazorServer](update) Login Layout and Page

--- a/LAKAPSAGAP.BlazorServer/Shared/MainLayout.razor
+++ b/LAKAPSAGAP.BlazorServer/Shared/MainLayout.razor
@@ -27,7 +27,7 @@
     <RadzenHeader class="shadow-sm" Style="box-shadow: var(--rz-shadow-0); background-color: var(--rz-white);">
         <NavMenu />
     </RadzenHeader>
-    <RadzenBody Style="background-color: var(--rz-base-200);">
+    <RadzenBody Style="background-color: var(--rz-base-200); padding: 0px">
         @Body
     </RadzenBody>
 @*     <RadzenFooter class="shadow">
