--- a/LAKAPSAGAP.BlazorServer/Shared/NavMenu.razor
+++ b/LAKAPSAGAP.BlazorServer/Shared/NavMenu.razor
@@ -3,7 +3,7 @@
 
     @* Website Logo *@
 
-    <div href="/Dashboard" Style="width: 18rem; "
+    <div href="/Dashboard" Style="width: 100%; "
          @onclick="@(() =>_navManager.NavigateTo("Dashboard", true))">
         <RadzenImage Path="images/long.png" Style="width: 14rem; " AlternateText="LakapSagap" />
     </div>
@@ -14,33 +14,33 @@
                  JustifyContent="JustifyContent.Center" Wrap="FlexWrap.NoWrap" Gap="1rem">
         <div class="d-flex flex-row gap-2 px-4 py-2 justify-content-center align-items-center link-active rz-border-radius-6"
              @onclick="@(() =>_navManager.NavigateTo("Dashboard", true))">
-            <i class='bx bxs-home fs-5'></i>
-            <span class="fs-7 fw-bold text-center">Dashboard</span>
+            <i class='bx bxs-home' style="font-size: 0.8rem"></i>
+            <span class="text fw-bold text-center" style="font-size: 0.75rem">Dashboard</span>
         </div>
         <div class="d-flex flex-row gap-2 px-4 py-2 justify-content-center align-items-center link rz-border-radius-6"
              @onclick="@(() =>_navManager.NavigateTo("Request", true))">
-            <i class='bx bx-transfer-alt fs-5'></i>
-            <span class="fs-6 fw-bold text-center">Request</span>
+            <i class='bx bx-transfer-alt' style="font-size: 0.8rem"></i>
+            <span class="fw-bold text-center" style="font-size: 0.75rem">Request</span>
         </div>
         <div @ref="warehouseButton" @onclick="@(args => {warehousePopup.ToggleAsync(warehouseButton); ToggleVisibility();})" class="d-flex flex-row gap-2 px-4 py-2 justify-content-center align-items-center link rz-border-radius-6">
-            <i class='bx bxs-business fs-5'></i>
-            <span class="fs-6 fw-bold text-center">Warehouse</span>
-            <i class="@($"bx {(_isVisible ? "bx-caret-up" : "bx-caret-down")} fs-6 ms-1")"></i>
+            <i class='bx bxs-business' style="font-size: 0.8rem"></i>
+            <span class="fw-bold text-center" style="font-size: 0.75rem">Warehouse</span>
+            <i class="@($"bx {(_isVisible ? "bx-caret-up" : "bx-caret-down")} ms-1")"></i>
         </div>
         <div class="d-flex flex-row gap-2 px-4 py-2 justify-content-center align-items-center link rz-border-radius-6"
              @onclick="@(() =>_navManager.NavigateTo("Users", true))">
-            <i class='bx bxs-user fs-5'></i>
-            <span class="fs-6 fw-bold text-center">Users</span>
+            <i class='bx bxs-user' style="font-size: 0.8rem"></i>
+            <span class="fw-bold text-center" style="font-size: 0.75rem">Users</span>
         </div>
         <div class="d-flex flex-row gap-2 px-4 py-2 justify-content-center align-items-center link rz-border-radius-6"
              @onclick="@(() =>_navManager.NavigateTo("Reports", true))">
-            <i class='bx bxs-report fs-5'></i>
-            <span class="fs-6 fw-bold text-center">Reports</span>
+            <i class='bx bxs-report' style="font-size: 0.8rem"></i>
+            <span class="fw-bold text-center" style="font-size: 0.75rem">Reports</span>
         </div>
         <div class="d-flex flex-row gap-2 px-4 py-2 justify-content-center align-items-center link rz-border-radius-6"
              @onclick="@(() =>_navManager.NavigateTo("History", true))">
-            <i class='bx bx-history fs-5'></i>
-            <span class="fs-6 fw-bold text-center">History</span>
+            <i class='bx bx-history' style="font-size: 0.8rem"></i>
+            <span class="fw-bold text-center" style="font-size: 0.75rem">History</span>
         </div>
     </RadzenStack>
 
@@ -61,13 +61,13 @@
         <div style="width: 100%; border: none; border-radius: var(--rz-border-radius-6);"
              class="d-flex flex-row gap-2 px-4 py-2 justify-content-center align-items-center link"
              @onclick="@(() =>_navManager.NavigateTo("Users", true))">
-            <i class='bx bxs-package fs-5'></i>
+            <i class='bx bxs-package' style="font-size: 0.8rem"></i>
             <span class="fs-6 fw-bold text-center">Stocks</span>
         </div>
         <div style="width: 100%; border: none; border-radius: var(--rz-border-radius-6);"
              class="d-flex flex-row gap-2 px-4 py-2 justify-content-start align-items-center link"
              @onclick="@(() =>_navManager.NavigateTo("Users", true))">
-            <i class='bx bxs-shopping-bag-alt fs-5'></i>
+            <i class='bx bxs-shopping-bag-alt' style="font-size: 0.8rem"></i>
             <span class="fs-6 fw-bold text-center">Kits</span>
         </div>
     </RadzenStack>
