--- a/LAKAPSAGAP.BlazorServer/Pages/UserManagement/UsersCreate.razor
+++ b/LAKAPSAGAP.BlazorServer/Pages/UserManagement/UsersCreate.razor
@@ -6,7 +6,7 @@
 				<div class="d-flex w-100 flex-column align-items-start justify-content-start gap-1">
 					<span class="fw-bold text-uppercase">Designation</span>
 					@* <RadzenTextBox Style="width: 100%;" Placeholder="Select Option" /> *@
-					<RadzenDropDown TValue="string" Data=@UserInfoViewModel.UserRoles Style="width: 100%;" Placeholder="Select option" />
+					<RadzenDropDown TValue="string" Style="width: 100%;" Placeholder="Select option" />
 				</div>
 			</div>
 			<div class="col w-full">
