--- a/LAKAPSAGAP.BlazorServer/Pages/Security/AuthLogin.razor
+++ b/LAKAPSAGAP.BlazorServer/Pages/Security/AuthLogin.razor
@@ -1,24 +1,30 @@
 ﻿@layout LoginLayout
 
-@page "/"
+
 @page "/login"
 
 <MacroContainer Style="width: 100%; height: 100%; padding: 0px; margin: 0px; position: relative;">
 	<RadzenImage Path="/images/login-background.jpg" Style="position: absolute; top: 0; left: 0; z-index:-1; width: 100%; height: 100%; background-repeat: no-repeat; background-size: cover; object-fit: cover; object-position: center;" />
 	<div class="d-flex w-100 h-100 align-items-center justify-content-center login-bg">
 		<RadzenCard Style="width: 100%; max-width: 480px; height: fit-content;" class="mx-4 my-4">
-			<RadzenStack Orientation="Orientation.Vertical" AlignItems="AlignItems.Center" JustifyContent="JustifyContent.Start" Gap="1rem" class="mx-4 my-4">
-				<RadzenImage Path="/images/long.png" Style="width: 20rem;" />
-				<div class="d-flex flex-column justify-content-center align-items-start w-100">
-					<label class="fw-bold text-capitalize">Username</label>
-					<input class="input" type="text" placeholder="Username" />
-				</div>
-				<div class="d-flex flex-column justify-content-center align-items-start w-100">
-					<label class="fw-bold text-capitalize">Password</label>
-					<input class="input" type="password" placeholder="Password" />
-				</div>
-				<RadzenButton Style="margin-top: 0.5rem; width: 100%; background-color: #4388FB; padding: 0.65rem 0rem 0.65rem 0rem; text-transform:capitalize; font-weight: 700; border-radius: var(--rz-border-radius-3)" Text="Login" />
-			</RadzenStack>
+			<EditForm Model="@loginViewModel" OnValidSubmit="async()=> await Login()">
+				<RadzenStack Orientation="Orientation.Vertical" AlignItems="AlignItems.Center" JustifyContent="JustifyContent.Start" Gap="1rem" class="mx-4 my-4">
+					<RadzenImage Path="/images/long.png" Style="width: 20rem;" />
+					<div class="d-flex flex-column justify-content-center align-items-start w-100">
+						<label class="fw-bold text-capitalize">Username</label>
+						<InputText id="username" @bind-Value="loginViewModel.Username" />
+						<ValidationMessage For="@(() => loginViewModel.Username)" />
+					</div>
+					<div class="d-flex flex-column justify-content-center align-items-start w-100">
+						<label class="fw-bold text-capitalize">Password</label>
+						<InputText id="password" type="password" @bind-Value="loginViewModel.Password" />
+						<ValidationMessage For="@(() => loginViewModel.Password)" />
+					</div>
+					<RadzenButton ButtonType="ButtonType.Submit" Style="margin-top: 0.5rem; width: 100%; background-color: #4388FB; padding: 0.65rem 0rem 0.65rem 0rem; text-transform:capitalize; font-weight: 700; border-radius: var(--rz-border-radius-3)" Text="Login" />
+					<p class="text-center text-danger">@loginError</p>
+				</RadzenStack>
+				
+			</EditForm>
 		</RadzenCard>
 	</div>
 </MacroContainer>
