--- a/LAKAPSAGAP.BlazorServer/Pages/Security/AuthLogin.razor
+++ b/LAKAPSAGAP.BlazorServer/Pages/Security/AuthLogin.razor
@@ -1,9 +1,9 @@
 ﻿@layout LoginLayout
 
 
-@page "/login"
+@page "/Account/login"
 
-<MacroContainer Style="width: 100%; height: 100%; padding: 0px; margin: 0px; position: relative;">
+<MacroContainer  Style="width: 100%; height: 100%; padding: 0px; margin: 0px; position: relative;">
 	<RadzenImage Path="/images/login-background.jpg" Style="position: absolute; top: 0; left: 0; z-index:-1; width: 100%; height: 100%; background-repeat: no-repeat; background-size: cover; object-fit: cover; object-position: center;" />
 	<div class="d-flex w-100 h-100 align-items-center justify-content-center login-bg">
 		<RadzenCard Style="width: 100%; max-width: 480px; height: fit-content;" class="mx-4 my-4">
