--- a/LAKAPSAGAP.BlazorServer/Pages/UserManagement/Users.razor
+++ b/LAKAPSAGAP.BlazorServer/Pages/UserManagement/Users.razor
@@ -55,6 +55,8 @@
 @code {
 
     [Inject] DialogService _dialogService { get; set; }
+    [CascadingParameter]
+    private HttpContext HttpContext { get; set; }
 
     private List<BreadcrumbViewModel> Breadcrumbs = new()
     {
@@ -63,6 +65,10 @@
 
     private List<UserInfoViewModel.UserInfo> _userInfoList = new();
 
+    protected override async Task OnInitializedAsync()
+    {
+        var user = HttpContext.User.FindFirst(ClaimTypes.NameIdentifier);
+    }
     async Task ShowUsersCreateDialog()
     {
         var result = await _dialogService.OpenAsync("Add User", ds => @<UsersCreate dialogService="ds" />,
