--- a/LAKAPSAGAP.BlazorServer/Shared/LoginLayout.razor
+++ b/LAKAPSAGAP.BlazorServer/Shared/LoginLayout.razor
@@ -1,6 +1,6 @@
 ﻿@inherits LayoutComponentBase
 
-<RadzenComponents @rendermode="InteractiveAuto" />
+<RadzenComponents @rendermode="InteractiveServer" />
 
 <RadzenLayout>
     <RadzenBody Style="background-color: var(--rz-base-200); padding: 0px">
