--- a/LAKAPSAGAP.BlazorServer/Shared/MainLayout.razor
+++ b/LAKAPSAGAP.BlazorServer/Shared/MainLayout.razor
@@ -1,6 +1,6 @@
 ﻿@inherits LayoutComponentBase
 
-<RadzenComponents @rendermode="InteractiveAuto" />
+<RadzenComponents @rendermode="InteractiveServer" />
 @* <div class="page">
     <div class="sidebar">
         <NavMenu />
