[BlazorServer](update) Stocks Page, Tabs, and DataGrids

--- a/LAKAPSAGAP.BlazorServer/Pages/Stocks/Stocks.razor
+++ b/LAKAPSAGAP.BlazorServer/Pages/Stocks/Stocks.razor
@@ -14,10 +14,7 @@
 			@* Side Content *@
 
 			<div class="card p-3 d-flex flex-column align-items-start just-items-start" style="width: 20%; height: 100%;">
-				<div class="d-flex flex-row gap-2 justify-content-center align-items-center text-success">
-					<i class='bx bxs-business fs-5'></i>
-					<span class="fw-bold text-center fs-5">Warehouse Status</span>
-				</div>
+				<Warehouse />
 			</div>
 
 			@* Center Contents *@
@@ -54,14 +51,6 @@
 						</RadzenTabsItem>
 					</Tabs>
 				</RadzenTabs>
-
-				
-
-				@* Data Grid *@
-
-				@* <RadzenDataGrid>
-
-				</RadzenDataGrid> *@
 
 			</div>
 		</div>
