--- a/LAKAPSAGAP.BlazorServer/Pages/Stocks/ReceivedStocksDataGrid.razor
+++ b/LAKAPSAGAP.BlazorServer/Pages/Stocks/ReceivedStocksDataGrid.razor
@@ -1,8 +1,52 @@
-﻿<div class="w-100 d-flex flex-row gap-2 justify-content-between align-items-end text-success">
-	<div class="d-flex justify-items-start align-items-center gap-2 mt-1">
-		<label class="rz-color-base-800 fw-bold">Search</label>
-		<input type="text" class="px-2 py-1 rz-border-radius-1 m-0 custom-input" style="width: 300px;" Placeholder="Search Received Stocks ..." />
-	</div>
+﻿@using static LAKAPSAGAP.Models.ViewModels.ReliefReceivedViewModel
+
+<div class="w-100 d-flex flex-column gap-2 justify-content-between align-items-end text-success">
+	<MacroSearch Placeholder="Search Received Stocks ... " />
 	<div class="d-flex justify-items-start align-items-center gap-2 mt-2">
+		<RadzenDataGrid AllowColumnResize="false" AllowPaging="true" AllowSorting="true" AllowFiltering="false" ShowPagingSummary="true"
+						Data="@_tableData" PageSize="10"
+						Style="border-radius: var(--rz-border-radius-2);">
+			<Columns>
+				<RadzenDataGridColumn Property="@nameof(ReliefReceived.Id)" Title="Batch ID"
+									  TextAlign="TextAlign.Left" Width="60px" />
+				<RadzenDataGridColumn Property="@nameof(ReliefReceived.ReliefType)" Title="Receive Type"
+									  TextAlign="TextAlign.Left" Width="80px" />
+				<RadzenDataGridColumn Property="@nameof(ReliefReceived.ReceivedFrom)" Title="Supplier"
+									  TextAlign="TextAlign.Left" Width="90px" />
+				<RadzenDataGridColumn Property="@nameof(ReliefReceived.ReceivedDate)" Title="Date Received"
+									  TextAlign="TextAlign.Left" Width="90px" />
+				<RadzenDataGridColumn Property="@nameof(ReliefReceived.Warehouse)" Title="Location"
+									  TextAlign="TextAlign.Left" Width="90px" />
+				<RadzenDataGridColumn Title="Actions" TextAlign="TextAlign.Left" Width="60px">
+					<Template Context="data">
+						<RadzenButton ButtonStyle="ButtonStyle.Primary" Icon="visibility" Style="border-radius: var(--rz-border-radius-2)" />
+						<RadzenButton ButtonStyle="ButtonStyle.Primary" Icon="edit" Style="border-radius: var(--rz-border-radius-2)" />
+						<RadzenButton ButtonStyle="ButtonStyle.Danger" Text="Return" Style="border-radius: var(--rz-border-radius-2)" />
+					</Template>
+				</RadzenDataGridColumn>
+			</Columns>
+			<Template Context="data">
+				<RadzenDataGrid AllowColumnResize="false" AllowPaging="true" AllowSorting="true" AllowFiltering="false" ShowPagingSummary="true"
+								Data="@data.StockDetailList" PageSize="10"
+								Style="border-radius: var(--rz-border-radius-2);">
+					<Columns>
+						<RadzenDataGridColumn Property="@nameof(StockDetail.Id)" Title="Batch ID"
+											  TextAlign="TextAlign.Left" Width="60px" />
+						<RadzenDataGridColumn Property="@nameof(StockDetail.ItemName)" Title="Receive Type"
+											  TextAlign="TextAlign.Left" Width="80px" />
+						<RadzenDataGridColumn Property="@nameof(StockDetail.Category)" Title="Date Received"
+											  TextAlign="TextAlign.Left" Width="90px" />
+						<RadzenDataGridColumn Property="@nameof(StockDetail.Quantity)" Title="Supplier"
+											  TextAlign="TextAlign.Left" Width="90px" />
+					</Columns>
+					<EmptyTemplate>
+						<p style="color: lightgrey; font-size: 24px; text-align: center; margin: 2rem;">No records to display.</p>
+					</EmptyTemplate>
+				</RadzenDataGrid>
+			</Template>
+			<EmptyTemplate>
+				<p style="color: lightgrey; font-size: 24px; text-align: center; margin: 2rem;">No records to display.</p>
+			</EmptyTemplate>
+		</RadzenDataGrid>
 	</div>
 </div>
