--- a/LAKAPSAGAP.BlazorServer/Shared/LoginLayout.razor
+++ b/LAKAPSAGAP.BlazorServer/Shared/LoginLayout.razor
@@ -1,9 +1,5 @@
 ﻿@inherits LayoutComponentBase
 
-<RadzenComponents @rendermode="InteractiveServer" />
-
-<RadzenLayout>
-    <RadzenBody Style="background-color: var(--rz-base-200); padding: 0px">
-        @Body
-    </RadzenBody>
-</RadzenLayout>
+<div class="vw-100 vh-100">
+    @Body
+</div>
