[BlazorServer](update) Receive Item Modal

--- a/LAKAPSAGAP.BlazorServer/Pages/Stocks/Stocks.razor
+++ b/LAKAPSAGAP.BlazorServer/Pages/Stocks/Stocks.razor
@@ -31,8 +31,10 @@
 						<span class="fw-bold rz-background-color-danger-lighter rz-border-radius-2 rz-color-danger fs-6 px-2 py-1">1000 expired</span>
 					</div>
 					<div>
-						<RadzenButton class="rz-border-radius-3 text-capitalize fw-bold" Style="letter-spacing: 0.25px;" Icon="add" Text="Receive" ButtonStyle="ButtonStyle.Success" />
-						<RadzenButton class="rz-border-radius-3 text-capitalize fw-bold" Style="letter-spacing: 0.25px;" Icon="send" Text="Send Relief" ButtonStyle="ButtonStyle.Success" />
+						<RadzenButton Click="ShowReceiveStockDialog" Icon="add" Text="Receive" ButtonStyle="ButtonStyle.Success"
+									  class="rz-border-radius-3 text-capitalize fw-bold" Style="letter-spacing: 0.25px;" />
+						<RadzenButton Icon="send" Text="Send Relief" ButtonStyle="ButtonStyle.Success"
+									  class="rz-border-radius-3 text-capitalize fw-bold" Style="letter-spacing: 0.25px;" />
 					</div>
 				</div>
 
@@ -57,3 +59,16 @@
 
 	</MacroContainer>
 </MacroBody>
+
+@code
+{
+	async Task ShowReceiveStockDialog()
+		{
+			var result = await _dialogService.OpenAsync("Receive Stock", ds => @<ReceiveStockForm dialogService="ds" /> ,
+			new DialogOptions()
+			{
+				CssClass = "rz-w-fit-content",
+				ShowTitle = false,
+			});
+		}
+}
