--- a/LAKAPSAGAP.BlazorServer/Pages/Security/AuthLogin.razor
+++ b/LAKAPSAGAP.BlazorServer/Pages/Security/AuthLogin.razor
@@ -1,7 +1,7 @@
 ﻿@layout LoginLayout
 
-@page "/"
-@page "/login"
+
+@page "/Account/login"
 
 <div class="w-100 h-100 p-0 m-0 position-relative d-flex justify-content-center align-items-center gap-1">
 	<div class="d-flex w-100 h-100 align-items-center justify-content-center">
