--- a/LAKAPSAGAP.BlazorServer/Pages/UserManagement/Users.razor
+++ b/LAKAPSAGAP.BlazorServer/Pages/UserManagement/Users.razor
@@ -67,7 +67,7 @@
 
     protected override async Task OnInitializedAsync()
     {
-        var user = HttpContext.User.FindFirst(ClaimTypes.NameIdentifier);
+       // var user = HttpContext.User.FindFirst(ClaimTypes.NameIdentifier);
     }
     async Task ShowUsersCreateDialog()
     {
