[BlazorServer][Models](fix) Fix button and View models

--- a/LAKAPSAGAP.BlazorServer/Pages/Security/AuthLogin.razor
+++ b/LAKAPSAGAP.BlazorServer/Pages/Security/AuthLogin.razor
@@ -17,7 +17,9 @@
 					<label class="fw-bold text-capitalize">Password</label>
 					<input class="input" type="password" placeholder="Password" />
 				</div>
-				<RadzenButton Style="margin-top: 0.5rem; width: 100%; background-color: #4388FB; padding: 0.65rem 0rem 0.65rem 0rem; text-transform:capitalize; font-weight: 700; border-radius: var(--rz-border-radius-3)" Text="Login" />
+				<button Style="margin-top: 0.5rem; width: 100%; background-color: #4388FB; padding: 0.65rem 0rem 0.65rem 0rem; text-transform:capitalize; font-weight: 700; border-radius: var(--rz-border-radius-3)">
+					Login
+				</button>
 			</RadzenStack>
 		</RadzenCard>
 	</div>
