--- a/LAKAPSAGAP.BlazorServer/Pages/Stocks/StocksDataGrid.razor
+++ b/LAKAPSAGAP.BlazorServer/Pages/Stocks/StocksDataGrid.razor
@@ -1,4 +1,4 @@
-﻿@using static LAKAPSAGAP.Models.ViewModels.ReliefReceivedViewModel
+﻿@using static LAKAPSAGAP.Models.ViewModel.ReliefReceivedViewModel
 <div class="w-100 d-flex flex-column gap-2 justify-content-between align-items-end text-success">
 	<MacroSearch Placeholder="Search Stocks ... " />
 	<div class="d-flex justify-items-start align-items-center gap-2 mt-2">
@@ -6,26 +6,26 @@
 						Data="@_tableData" PageSize="10"
 						Style="border-radius: var(--rz-border-radius-2);">
 			<Columns>
-				<RadzenDataGridColumn Property="@nameof(StockDetail.BatchNumber)" Title="Batch ID"
+				<RadzenDataGridColumn Property="@nameof(StockDetailViewModel.BatchNumber)" Title="Batch ID"
 									  TextAlign="TextAlign.Left" Width="60px" />
-				<RadzenDataGridColumn Property="@nameof(StockDetail.Id)" Title="Item Code"
+				<RadzenDataGridColumn Property="@nameof(StockDetailViewModel.Id)" Title="Item Code"
 									  TextAlign="TextAlign.Left" Width="80px" />
-				<RadzenDataGridColumn Property="@nameof(StockDetail.ItemName)" Title="Item"
+				<RadzenDataGridColumn Property="@nameof(StockDetailViewModel.ItemName)" Title="Item"
 									  TextAlign="TextAlign.Left" Width="150px" />
-				<RadzenDataGridColumn Property="@nameof(StockDetail.Type)" Title="Type"
+				<RadzenDataGridColumn Property="@nameof(StockDetailViewModel.Type)" Title="Type"
 									  TextAlign="TextAlign.Left" Width="90px" />
-				<RadzenDataGridColumn Property="@nameof(StockDetail.Category)" Title="Category"
+				<RadzenDataGridColumn Property="@nameof(StockDetailViewModel.Category)" Title="Category"
 									  TextAlign="TextAlign.Left" Width="90px" />
-				<RadzenDataGridColumn Property="@nameof(StockDetail.Quantity)" Title="Qty"
+				<RadzenDataGridColumn Property="@nameof(StockDetailViewModel.Quantity)" Title="Qty"
 									  TextAlign="TextAlign.Left" Width="90px" />
-				<RadzenDataGridColumn Property="@nameof(StockDetail.UnitOfMeasure)" Title="UoM"
+				<RadzenDataGridColumn Property="@nameof(StockDetailViewModel.UnitOfMeasure)" Title="UoM"
 									  TextAlign="TextAlign.Left" Width="90px" />
 				<RadzenDataGridColumn Title="Location" TextAlign="TextAlign.Left" Width="90px">
 					<Template Context="data">
 						@data.Floor - @data.Rack
 					</Template>
 				</RadzenDataGridColumn>
-				<RadzenDataGridColumn Property="@nameof(StockDetail.ExpiryDate)" Title="Expiration Date" FormatString="{0:MMM dd, yyyy}"
+				<RadzenDataGridColumn Property="@nameof(StockDetailViewModel.ExpiryDate)" Title="Expiration Date" FormatString="{0:MMM dd, yyyy}"
 									  TextAlign="TextAlign.Left" Width="90px" />
 				<RadzenDataGridColumn Title="Actions" TextAlign="TextAlign.Left" Width="60px">
 					<Template Context="data">
