--- a/LAKAPSAGAP.BlazorServer/Pages/UserManagement/Users.razor
+++ b/LAKAPSAGAP.BlazorServer/Pages/UserManagement/Users.razor
@@ -1,6 +1,7 @@
 ﻿@layout MainLayout
 
 @page "/Users"
+@using LAKAPSAGAP.Models.ViewModel
 
 <PageTitle>Users</PageTitle>
 
@@ -18,27 +19,27 @@
 
     <RadzenDataGrid AllowFiltering="true" AllowColumnResize="false" AllowAlternatingRows="false" FilterMode="FilterMode.Simple"
                     AllowSorting="true" PageSize="5" AllowPaging="false" PagerHorizontalAlign="HorizontalAlign.Left"
-                    ShowPagingSummary="true" Data=@_userInfoList TItem="UserInfoViewModel.UserInfo" LogicalFilterOperator="LogicalFilterOperator.Or"
+                    ShowPagingSummary="true" Data=@_userInfoList TItem="UserInfoViewModel" LogicalFilterOperator="LogicalFilterOperator.Or"
                     Style="border-radius: var(--rz-border-radius-3);">
         <EmptyTemplate>
             <p style="color: lightgrey; font-size: 24px; text-align: center; margin: 2rem;">No records to display.</p>
         </EmptyTemplate>
         <Columns>
-            <RadzenDataGridColumn TItem="UserInfoViewModel.UserInfo" Property="Id" Title="Id" Width="80px" />
-            <RadzenDataGridColumn TItem="UserInfoViewModel.UserInfo" Title="Full Name" Width="250px">
+            <RadzenDataGridColumn TItem="UserInfoViewModel" Property="Id" Title="Id" Width="80px" />
+            <RadzenDataGridColumn TItem="UserInfoViewModel" Title="Full Name" Width="250px">
                 <Template Context="data">
                     @($"{data.FirstName} {data.MiddleName} {data.LastName}")
                 </Template>
             </RadzenDataGridColumn>
-            <RadzenDataGridColumn TItem="UserInfoViewModel.UserInfo" Title="Organization" Width="250px">
+            <RadzenDataGridColumn TItem="UserInfoViewModel" Title="Organization" Width="250px">
                 <Template Context="data">
                     @($"{data.Barangay} {data.UserRole}")
                 </Template>
             </RadzenDataGridColumn>
-            <RadzenDataGridColumn TItem="UserInfoViewModel.UserInfo" Property="Email" Title="Email" Width="160px" />
-            <RadzenDataGridColumn TItem="UserInfoViewModel.UserInfo" Property="Phone" Title="Phone Number" Width="150px" />
-            <RadzenDataGridColumn TItem="UserInfoViewModel.UserInfo" Property="UserRole" Title="Designation" Width="150px" />
-            <RadzenDataGridColumn TItem="UserInfoViewModel.UserInfo" Title="Actions" Width="80px">
+            <RadzenDataGridColumn TItem="UserInfoViewModel" Property="Email" Title="Email" Width="160px" />
+            <RadzenDataGridColumn TItem="UserInfoViewModel" Property="Phone" Title="Phone Number" Width="150px" />
+            <RadzenDataGridColumn TItem="UserInfoViewModel" Property="UserRole" Title="Designation" Width="150px" />
+            <RadzenDataGridColumn TItem="UserInfoViewModel" Title="Actions" Width="80px">
                 <Template Context="data">
                     <RadzenButton Style="border-radius: var(--rz-border-radius-3);"
                                   Icon="add" Shade="Shade.Light" ButtonStyle="ButtonStyle.Primary"/>
@@ -61,7 +62,7 @@
         new BreadcrumbViewModel { Path = "/Users", Text = "User Management" },
     };
 
-    private List<UserInfoViewModel.UserInfo> _userInfoList = new();
+    private List<UserInfoViewModel> _userInfoList = new();
 
     async Task ShowUsersCreateDialog()
     {
